cashflow-mappings/force-app/main/default/objects/SuperTRUMP_Loan_Cash_Flow_Step__c/SuperTRUMP_Loan_Cash_Flow_Step__c.object-meta.xml
<CustomObject>
    <label>SuperTRUMP Loan Cash Flow Step</label>
    <nameField>
        <displayFormat>LCFS-{00000}</displayFormat>
        <label>Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuperTRUMP Loan Cash Flow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>