cashflow-mappings/force-app/main/default/objects/SuperTRUMP_Loan_Cash_Flow_Step__c/fields/Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payments__c</fullName>
    <label>Num</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>