cashflow-mappings/force-app/main/default/objects/SuperTRUMP_Loan_Cash_Flow_Step__c/fields/Rate_Locked__c.field-meta.xml
<CustomField>
    <fullName>Rate_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rate Locked</label>
    <type>Checkbox</type>
</CustomField>